@startuml CTV-MER
title Compra Tu Viaje (CTV) - Entity Relationship Model

hide circle
skinparam linetype ortho
skinparam roundcorner 8
skinparam shadowing false

legend top left
  PK = Primary Key   FK = Foreign Key   UK = Unique Key
  Conceptual names are singular (city, hotel, package).
  Physical JPA tables are plural (cities, hotels, packages)
  because "package" is a reserved SQL word.
  Cross-service: package outbound/return flight ids are LOGICAL
  references to flights-service (no DB foreign key).
endlegend

' ==========================================================
' Backend DB (CTV)
' ==========================================================
package "Base de Datos Backend - CTV" #F7F9FC {

  entity "city" as city {
    * code : char(3) <<PK>>  -- IATA city code (e.g. BUE)
    --
    * name : varchar <<NOT NULL>>
  }

  entity "agency" as agency {
    * id : bigint <<PK>>
    --
    * name : varchar <<NOT NULL>>
  }

  entity "user" as user {
    * id : bigint <<PK>>
    --
    * user_type : varchar <<NOT NULL>>  -- JPA discriminator: STANDARD | AGENCY (User / AgencyUser)
    * username : varchar <<UK>> <<NOT NULL>>
    * password : varchar <<NOT NULL>>
    * role : varchar <<NOT NULL>>  -- BUYER | AGENCY | ADMIN
    * first_name : varchar <<NOT NULL>>
    * last_name : varchar <<NOT NULL>>
      agency_id : bigint <<FK>>  -- only when role = AGENCY (AgencyUser)
  }

  entity "hotel" as hotel {
    * id : bigint <<PK>>
    --
    * name : varchar <<NOT NULL>>
    * city_code : char(3) <<FK>> <<NOT NULL>>
    * photo_url : varchar <<NOT NULL>>
  }

  entity "package" as package {
    * id : bigint <<PK>>
    --
    * agency_id : bigint <<FK>> <<NOT NULL>>
    * hotel_id : bigint <<FK>> <<NOT NULL>>
    * origin_city_code : char(3) <<FK>> <<NOT NULL>>
    * destination_city_code : char(3) <<FK>> <<NOT NULL>>
    * name : varchar <<NOT NULL>>  -- keyword search
    * outbound_flight_id : bigint <<NOT NULL>>  -- logical ref -> flights
    * return_flight_id : bigint <<NOT NULL>>    -- logical ref -> flights
    * price : numeric <<NOT NULL>>
    .. unique ..
    (agency_id, name)
  }

  entity "favorite" as favorite {
    * id : bigint <<PK>>
    --
    * buyer_id : bigint <<FK>> <<NOT NULL>>
    * package_id : bigint <<FK>> <<NOT NULL>>
    .. unique ..
    (buyer_id, package_id)
  }

  entity "review" as review {
    * id : bigint <<PK>>
    --
    * buyer_id : bigint <<FK>> <<NOT NULL>>
    * package_id : bigint <<FK>> <<NOT NULL>>
    * score : integer <<NOT NULL>>  -- rango 0..10 validado en la aplicación
      comment : text
    .. unique ..
    (buyer_id, package_id)
  }

  entity "purchase" as purchase {
    * id : bigint <<PK>>
    --
    * buyer_id : bigint <<FK>> <<NOT NULL>>
    * package_id : bigint <<FK>> <<NOT NULL>>
    * agency_id : bigint <<FK>> <<NOT NULL>>  -- denormalized at purchase time
    * purchase_price : numeric <<NOT NULL>>  -- price at purchase time
    * purchased_at : timestamp <<NOT NULL>>
  }
}

' ==========================================================
' Flights-Service DB (external API - separate database)
' ==========================================================
package "Base de Datos - API de Vuelos" #FCF7F2 {

  entity "flight" as flight {
    * id : bigint <<PK>>
    --
    * airline : varchar <<NOT NULL>>
    * flight_date : date <<NOT NULL>>
    * departure_time : time <<NOT NULL>>
    * origin : char(3) <<NOT NULL>>       -- IATA city code
    * destination : char(3) <<NOT NULL>>  -- IATA city code
    * capacity : int <<NOT NULL>>
    * availability : int <<NOT NULL>>
  }

  entity "flight_sale" as flight_sale {
    * id : bigint <<PK>>
    --
    * flight_id : bigint <<FK>> <<NOT NULL>>
    * passenger_name : varchar <<NOT NULL>>
  }
}

' ==========================================================
' Relationships (crow's foot / Information Engineering)
' ==========================================================
city    ||--o{ hotel    : "tiene"
city    ||--o{ package  : "ORIGEN"
city    ||--o{ package  : "DESTINO"
agency  ||--o{ user     : "EMPLEA"
agency  ||--o{ package  : "OFRECE"
agency  ||--o{ purchase : "vendida por"
hotel   ||--o{ package  : "incluido en"
user    ||--o{ purchase : "REALIZA"
package ||--o{ purchase : "VENDIDO"
user    ||--o{ favorite : "GUARDA"
package ||--o{ favorite : "guardado en"
user    ||--o{ review   : "ESCRIBE"
package ||--o{ review   : "RESEÑADO EN"

flight  ||--o{ flight_sale : "VENDIDO EN"

' Cross-service logical link (no physical FK)
package ..> flight : "IDA / VUELTA\n(logical ref)"

@enduml
